--- a/criacao_sites.html
+++ b/criacao_sites.html
@@ -44,36 +44,31 @@
 			<!--jumbotron,para a principal mensagem de marking ou call to acton-->
 			<div class="jumbotron">
 				<div class="container">
-					<h1 class="display-3">ESPECIALISTAS NA CRIAÇÃO DE SITES</h1>
-					<p>LOJAS ONLINE & MARKETING DIGITAL</p>
+					<h1 class="display-3">CRIAÇÃO DE SITES</h1>
 					<p><a class="btn btn-primary btn-lg" href="#" role="button">Saiba mais &raquo;</a></p>
 				</div>
 			</div>
+
 			<div class="container">
 				<!--Exemplo de linha de colunas-->
 				<div class="row">
-					<div class="col-md-4">
-						<h2>CRIAÇÃO DE SITES</h2>
-						<p>Pretende criar um site com qualidade e criatividade. Criamos sites que potenciam negócios.</p>
-						<p><a class="btn btn-secondary" href="criacao_sites.html" role="button">Ver detalhes &raquo;</a></p>
+					<div class="col-md-6">
+						<p>A <strong> Navbar </strong>é uma empresa especializada na Criação de Sites.</p>
 					</div>
-					<div class="col-md-4">
-						<h2>MARKETING DIGITAL</h2>
-						<p>Destaque o seu site com companhas de marketing digital no Google e no Facebook.</p>
-						<p><a class="btn btn-secondary" href="marketing.html" role="button">Ver detalhes &raquo;</a></p>
-					</div>
-					<div class="col-md-4">
-						<h2>DESIGN</h2>
-						<p>Uma imagem criativa permite potenciar e diferenciar o seu negócio. Criamos logótipos que marcam.</p>
-						<p><a class="btn btn-secondary" href="design.html" role="button">Ver detalhes &raquo;</a></p>
+					<div class="col-md-6">
+						<p>Criamos sites que sejam notados pela criatividade. O objectivo é garantir o sucesso do negócio online.</p>
 					</div>
 				</div>
 				<hr>
-			</div><!--/container-->
-		</main>
-		<footer class="container">
-			<p>&copy;Companhia GPSI 2020-2021</p>
-		</footer>
+				<div class="row">
+					<div class="col-md-8">
+						<p><img class="img-fluid" src="img/responsivos.png"></p>
+					</div>
+					<div class="row">
+					<div class="col-md-2">
+						<p>A <strong> Navbar </strong>é uma empresa especializada na Criação de Sites.</p>
+					</div>
+			</div>
 
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
