Update criacao_sites.html, equipa.png, and 2 more files...

--- a/criacao_sites.html
+++ b/criacao_sites.html
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 
-			<div class="container">
+			<div class="container" style="font-size: 20px;">
 				<!--Exemplo de linha de colunas-->
 				<div class="row">
 					<div class="col-md-6">
@@ -59,16 +59,51 @@
 						<p>Criamos sites que sejam notados pela criatividade. O objectivo é garantir o sucesso do negócio online.</p>
 					</div>
 				</div>
-				<hr>
+
 				<div class="row">
-					<div class="col-md-8">
+					<div class="col-md-6">
 						<p><img class="img-fluid" src="img/responsivos.png"></p>
 					</div>
-					<div class="row">
-					<div class="col-md-2">
-						<p>A <strong> Navbar </strong>é uma empresa especializada na Criação de Sites.</p>
+					<div class="col-md-1"></div>
+					<div class="col-md-5">
+						<br><br>
+							<h2>Sites Responsivos</h2>
+							<p>Todos os sites que desenvolvemos são responsivos,ou seja, adaptam-se a todas as plataformas.</p>
+				    </div>
+			    </div>
+
+			    <br><br>
+
+			    <div class="row">
+					<div class="col-md-5">
+						<br><br>
+							<h2>Navegação fluida & Fácil</h2>
+							<p>Usamos um layout limpo e de fácil navegação, com uma representação clara para que a comunicação seja simples, eficaz.</p>
+							<p></p>
+				    </div>
+				    <div class="col-md-1"></div>
+				    <div class="col-md-6">
+						<p><img class="img-fluid" src="img/fluida.png"></p>
 					</div>
-			</div>
+			    </div>
+
+			    <br><br>
+
+			    <div class="row">
+					<div class="col-md-6">
+						<p><img class="img-fluid" src="img/equipa.png"></p>
+					</div>
+				    <div class="col-md-1"></div>
+					<div class="col-md-5">
+						<br><br>
+							<h2>CRIAÇÃO DE SITES À MEDIDA</h2>
+							<p>A Navbar coloca à sua disposição uma equipa de webdesigners especializados para garantir um trabalho final de elevada qualidade e criatividade.</p>
+							<p></p>
+				    </div>
+			    </div>
+
+            </div>
+
 
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
