Update criacao_sites.html, design.html, and 12 more files...

--- a/criacao_sites.html
+++ b/criacao_sites.html
@@ -23,8 +23,8 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="criacao_sites.html">Criação de sites</a>
-						<a class="nav-link" href="marking.html">Marketing</a>
-						<a class="nav-link" href="desing.html">Desing de sites</a>
+						<a class="nav-link" href="marketing.html">Marketing</a>
+						<a class="nav-link" href="design.html">Desing de sites</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link disabled" href="#">Desativado</a>
@@ -44,8 +44,7 @@
 			<!--jumbotron,para a principal mensagem de marking ou call to acton-->
 			<div class="jumbotron">
 				<div class="container">
-					<h1 class="display-3">CRIAÇÃO DE SITES</h1>
-					<p><a class="btn btn-primary btn-lg" href="#" role="button">Saiba mais &raquo;</a></p>
+					<h1 class="display-3">DESING</h1>
 				</div>
 			</div>
 
@@ -101,7 +100,6 @@
 							<p></p>
 				    </div>
 			    </div>
-
             </div>
 
 
