--- a/marketing.html
+++ b/marketing.html
@@ -24,7 +24,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="criacao_sites.html">Criação de sites</a>
 						<a class="nav-link" href="marking.html">Marketing</a>
-						<a class="nav-link" href="desing.html">Desing de sites</a>
+						<a class="nav-link" href="design.html">Desing de sites</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link disabled" href="#">Desativado</a>
@@ -45,10 +45,74 @@
 			<div class="jumbotron">
 				<div class="container">
 					<h1 class="display-3">MARKETING</h1>
-					<p><a class="btn btn-primary btn-lg" href="#" role="button">Saiba mais &raquo;</a></p>
 				</div>
 			</div>
 
+			<div class="container" style="font-size: 18px;">
+				<!--Exemplo de linha de colunas-->
+				<div class="row">
+					<div class="col-md-2" align="center">
+						<p><img class="img-fluid" src="img/mercado.png" align="center"></p>
+					</div>
+					<div class="col-md-4">
+						<br><br>
+							<h2>Estudo de Mercado</h2>
+							<p>Garantimos que está a lançar o produto ideal para o público ideal!</p>
+				    </div>
+				    <div class="col-md-2">
+						<p><img class="img-fluid" src="img/email.png" align="center"></p>
+					</div>
+					<div class="col-md-4">
+						<br><br>
+							<h2>E-mail de Marketing</h2>
+							<p>Garantindo um fluxo de comunicação relevante e optimizado ao seu público-alvo.</p>
+							<p></p>
+				    </div>				    
+			    </div>
+
+			    <br><br>
+
+				<div class="row">
+					<div class="col-md-2">
+						<p><img class="img-fluid" src="img/videos.png" align="center"></p>
+					</div>
+					<div class="col-md-4">
+						<br><br>
+							<h2>Fotografia e videos Promocionais</h2>
+							<p>Sabemos que uma imagem vale mais que mil palavras... Promovemos os seus produtos de forma apelativa e captivante, com fotos e videos profissionais.</p>
+				    </div>
+				    <div class="col-md-2">
+						<p><img class="img-fluid" src="img/gestao.png" align="center"></p>
+					</div>
+					<div class="col-md-4">
+						<br><br>
+							<h2>Gestão de Redes Sociais e Influenciadores</h2>
+							<p>Viralizamos o seu negócio e os seus produtos, integrando a sua atividade nesta era social, responsável por uma importante quota do mercado online.</p>
+							<p></p>
+				    </div>				    
+			    </div>
+
+			    <br><br>
+
+				<div class="row">
+					<div class="col-md-2">
+						<p><img class="img-fluid" src="img/engagement.png" align="center"></p>
+					</div>
+					<div class="col-md-4">
+						<br><br>
+							<h2>Engagemento</h2>
+							<p>Varios formatos de campanhas.</p>
+				    </div>
+				    <div class="col-md-2">
+						<p><img class="img-fluid" src="img/fluida.png" align="center"></p>
+					</div>
+					<div class="col-md-4">
+						<br><br>
+							<h2>Trafego</h2>
+							<p>Rankings elevados no Google aumentam o tráfego para o site, em particular o tráfego qualificado</p>
+							<p></p>
+				    </div>				    
+			    </div>
 
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
