--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="criacao_sites.html">Criação de sites</a>
 						<a class="nav-link" href="marking.html">Marketing</a>
-						<a class="nav-link" href="desing.html">Desing de sites</a>
+						<a class="nav-link" href="design.html">Desing de sites</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link disabled" href="#">Desativado</a>
@@ -41,30 +41,47 @@
 			</div>
 		</nav>
 		<main role="main">
-			<!--jumbotron,para a principal mensagem de marking ou call to acton-->
-			<div class="jumbotron">
-				<div class="container">
-					<h1 class="display-3">ESPECIALISTAS NA CRIAÇÃO DE SITES</h1>
-					<p>LOJAS ONLINE & MARKETING DIGITAL</p>
-					<p><a class="btn btn-primary btn-lg" href="#" role="button">Saiba mais &raquo;</a></p>
-				</div>
+			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			  <div class="carousel-inner">
+			    <div class="carousel-item active">
+			      <img src="img/descontos.png" class="d-block w-100" height="350px">
+			    </div>
+			    <div class="carousel-item">
+			      <img src="img/agradecimento.png" class="d-block w-100" height="350px">
+			    </div>
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
 			</div>
+			<br>
 			<div class="container">
 				<!--Exemplo de linha de colunas-->
 				<div class="row">
 					<div class="col-md-4">
 						<h2>CRIAÇÃO DE SITES</h2>
 						<p>Pretende criar um site com qualidade e criatividade. Criamos sites que potenciam negócios.</p>
+						<br>
+						<p><img class="img-fluid" src="img/criacao.png" width="250px"></p>
 						<p><a class="btn btn-secondary" href="criacao_sites.html" role="button">Ver detalhes &raquo;</a></p>
 					</div>
 					<div class="col-md-4">
 						<h2>MARKETING DIGITAL</h2>
 						<p>Destaque o seu site com companhas de marketing digital no Google e no Facebook.</p>
+						<br><br>
+						<p><img class="img-fluid" src="img/marketing.png" width="250px"></p>
 						<p><a class="btn btn-secondary" href="marketing.html" role="button">Ver detalhes &raquo;</a></p>
 					</div>
 					<div class="col-md-4">
 						<h2>DESIGN</h2>
 						<p>Uma imagem criativa permite potenciar e diferenciar o seu negócio. Criamos logótipos que marcam.</p>
+						<br>
+						<p><img class="img-fluid" src="img/design.png" width="250px"></p>
 						<p><a class="btn btn-secondary" href="design.html" role="button">Ver detalhes &raquo;</a></p>
 					</div>
 				</div>
