Update design.html, atualizar.PNG, and 6 more files...

--- a/design.html
+++ b/design.html
@@ -47,8 +47,48 @@
 					<h1 class="display-3">DESING</h1>
 				</div>
 			</div>
-			
+			<div class="row" >
+					<div class="col-md-2" >
+						<p align="center"><img class="img-fluid"  src="img/desenho.png" width="100px" ></p>
+					</div>
+					<div class="col-md-3">
+						<br><br>
+							<h2>Planeamento do layout </h2>
+							<p>Desenhamos soluções personalizadas e à sua medida, Websites totalmente criados do zero, especialmente desenhados para si.</p>
+				    </div>
+				    <div class="col-md-2">
+						<p align="center"><img class="img-fluid"  src="img/layout.png" width="100px" ></p>
+					</div>
+					<div class="col-md-3">
+						<br><br>
+							<h2>Criação do layout</h2>
+							<p>Design de Layouts e Websites à medida: faça do seu espaço online a cara da sua empresa, porque um design personalizado e responsive melhora a relação com os seus clientes</p>
+							<p></p>
+				    </div>				    
+			    </div>
 
+			    <br><br>
+
+				<div class="row">
+					<div class="col-md-2">
+						<p align="center"><img class="img-fluid"  src="img/logo.png" width="100px" ></p>
+					</div>
+					<div class="col-md-3">
+						<br><br>
+							<h2>Logotipos</h2>
+							<p>Com um mercado cada vez mais competitivo, cresce ainda mais a necessidade das empresas acompanharem as tendências. Um novo logótipo, que cumpra o seu objetivo, distingui-lo-á mais facilmente da concorrência. </p>
+				    </div>
+				    <div class="col-md-2">
+						<p align="center"><img class="img-fluid"  src="img/atualizar.png"  width="100px" ></p>
+					</div>
+					<div class="col-md-3">
+						<br><br>
+							<h2>Atualização de logos</h2>
+							<p>A nossa equipa irá rejuvenescer e dar um novo visual à sua empresa, para que esta marque a sua presença no mercado!</p>
+							<p></p>
+				    </div>				    
+			    </div>
+			</main>
 
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
