--- a/marketing.html
+++ b/marketing.html
@@ -96,7 +96,7 @@
 
 				<div class="row">
 					<div class="col-md-2">
-						<p><img class="img-fluid" src="img/engagement.png" align="center"></p>
+						<p><img class="img-fluid" src="img/engagement.png" align="center" width="100px"></p>
 					</div>
 					<div class="col-md-4">
 						<br><br>
@@ -104,11 +104,11 @@
 							<p>Varios formatos de campanhas.</p>
 				    </div>
 				    <div class="col-md-2">
-						<p><img class="img-fluid" src="img/fluida.png" align="center"></p>
+						<p><img class="img-fluid" src="img/trafego.jpg" width="150px" align="center"></p>
 					</div>
 					<div class="col-md-4">
 						<br><br>
-							<h2>Trafego</h2>
+							<h2>Tráfego</h2>
 							<p>Rankings elevados no Google aumentam o tráfego para o site, em particular o tráfego qualificado</p>
 							<p></p>
 				    </div>				    
